# observatorio-ipa

./: .gitignore  README.md  pyproject.toml
notebooks/: auto_scripts.ipynb
src/observatorio_ipa/: binary.py  defaults.py  main.py  merge.py  spatial_4.py  spatial_8.py  temporal.py
src/observatorio_ipa/gee/: assets.py  exports.py  utils.py
src/observatorio_ipa/processes/: binary.py  merge.py  monthly_export.py  reclass_and_impute.py
src/observatorio_ipa/processes/imputation/: spatial_4.py  spatial_8.py  temporal.py
src/observatorio_ipa/templates/: error_email_template.txt  results_email_template.txt
src/observatorio_ipa/utils/: command_line.py  dates.py  lists.py  logs.py  messaging.py  scripting.py
tests/: test_binary.py  test_main.py  test_merge.py  test_spatial4.py
tests/gee/: test_assets.py
tests/processes/: conftest.py  test_binary.py  test_merge.py  test_monthly_export.py  test_monthly_export_proc.py  test_spatial4.py
tests/utils/: test_command_line_args.py  test_dates.py  test_lists.py  test_logs.py  test_messaging.py  test_scripting.py
